--- a/soccer/.gitignore
+++ b/soccer/.gitignore
@@ -1,15 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
+# Production
+dist/
 
 # misc
 .DS_Store
