--- a/soccer/package.json
+++ b/soccer/package.json
@@ -2,15 +2,17 @@
   "name": "soccer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack",
+    "lint": "eslint src/**/*.js src/**/*.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "OJP98",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -19,7 +21,20 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.0",
+    "eslint": "^7.12.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.1.1",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
+    "svg-url-loader": "^6.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
