--- a/soccer/package.json
+++ b/soccer/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "fontsource-roboto": "^3.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
