--- a/soccer/package.json
+++ b/soccer/package.json
@@ -39,5 +39,12 @@
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "browser": {
+    "fs": false,
+    "child_process": false,
+    "util": false,
+    "os": false,
+    "path": false
   }
 }
